--- a/MARTA/client/BreezecardManagement.html
+++ b/MARTA/client/BreezecardManagement.html
@@ -47,29 +47,15 @@
           <th>Owner</th>
         </tr>
       </thead>
-      <!-- <tbody>
-        <tr>
-          <td>2349873456782343</td>
-          <td>1.00</td>
-          <td>Michael</td>
-        </tr>
-        <tr>
-          <td>3249385563728392</td>
-          <td>48.20</td>
-          <td>John</td>
-        </tr>
-        <tr>
-          <td>9238474839485732</td>
-          <td>42.30</td>
-          <td>Zach</td>
-        </tr>
-        <tr>
-            <td>2342373456782343</td>
-            <td>10.00</td>
-            <td>Suspended</td>
-          </tr>
-      </tbody> -->
     </table>
+    <div style="margin:15px">
+      <input type="text" id="newValue"></input>
+      <button type="submit" class="btn btn-default">Set Value of Selected Card</button>
+  </div>
+  <div style="margin:15px">
+      <input type="text" id="transfer"></input>
+      <button type="submit" class="btn btn-default">Transfer Selected Card</button>
+  </div>
   </div>
   
   <script src="js/table.js"></script>
