--- a/MARTA/client/PassengerBreezecards.html
+++ b/MARTA/client/PassengerBreezecards.html
@@ -16,7 +16,7 @@
     <div class="container" style="margin-top:20px">
         <form id="PassengerBreezecards" class="form-horizontal">
             <div class="form-row">
-                <label for="sel1" style="float:left; padding: 6px 12px 2px 6px;">Select Breezecard:</label>
+                <label for="sel1" style="float:left; padding: 6px 12px 2px 6px;">Select Breezecard</label>
                 <div class="col-sm-6">
                     <select class="form-control" id="sel1">
                         <option>Select Breezecard</option>
@@ -34,7 +34,8 @@
                     <select class="form-control" id="sel2">
                     </select>
                 </div>
-                <button type="button" class="btn btn-default">Start Trip</button>
+                <button type="button" class="btn btn-default" id="start">Start Trip</button>
+                <label id="progress" style="margin-top:8px; margin-left:10px; color:green">Trip in progress</label>
             </div>
             <div class="form-row">
                 <label for="sel3" style="float:left; padding: 6px 80px 2px 6px;">Ending At</label>
@@ -42,7 +43,7 @@
                     <select class="form-control" id="sel3">
                     </select>
                 </div>
-                <button type="button" class="btn btn-default">End Trip</button>
+                <button type="button" class="btn btn-default" id="end">End Trip</button>
             </div>
             <div style="margin-top:100px">
                 <div style="float: left; width: 130px">
