--- a/MARTA Project/public/viewStation.html
+++ b/MARTA Project/public/viewStation.html
@@ -18,7 +18,8 @@
     <div class="container">
         <h1 style="margin:15px">Station Name</h1>
         <div style="margin:15px">
-            <label id="stopid"></label>
+            <label>Stop ID</label>
+            <label id="stopid" style="margin-left:130px"></label>
         </div>
         <div style="margin:15px">
             <label style="margin-right:150px">Fare:</label>
@@ -28,6 +29,7 @@
         </div>
         <div style="margin:15px">
             <label>Nearest Intersection: </label>
+            <label id="intersection" style="margin-left:30px"></label>
         </div>
         <div class="form-check" style="margin:15px">
             <label class="form-check-label" style="margin-bottom:10px">
