add seconds to DateTime filtering

--- a/MARTA Project/public/tripHistory.html
+++ b/MARTA Project/public/tripHistory.html
@@ -17,11 +17,11 @@
         <h1>Trip History</h1>
         <div style="margin:15px">
             <label>Start Time</label>
-            <input id="starttime" type="datetime-local"></input>
+            <input id="starttime" type="datetime-local" step="1"></input>
         </div>
         <div style="margin:15px">
             <label>End Time</label>
-            <input id="endtime" type="datetime-local"></input>
+            <input id="endtime" type="datetime-local" step="1"></input>
         </div>
         <div class="form-group">
             <div class="col-xs-9 col-xs-offset-3">
