add error messages

--- a/MARTA Project/public/manageCards.html
+++ b/MARTA Project/public/manageCards.html
@@ -25,7 +25,7 @@
                 </tr>
             </thead>
         </table>
-        <p id="wrong-rm-msg">You can't remove the last card in your accout!</p>
+        <p id="wrong-rm-msg" style="color:red">You can't remove the last card in your accout!</p>
         <div style="margin:15px">
             <input type="number" id="new-card-num"></input>
             <button type="submit" class="btn btn-default" id="add-new-card-btn">Add Card</button>
@@ -35,6 +35,7 @@
         <div style="margin:15px">
             <label>Credit Card #</label>
             <input id="credit-card" type="number"></input>
+            <p id="wrong-credit-num" style="color:red">Please enter 16 digits.</p>
         </div>
         <div style="margin:15px">
             <label>Value</label>
