--- a/MARTA/client/breezecard.html
+++ b/MARTA/client/breezecard.html
@@ -48,6 +48,21 @@
         </tr>
       </thead>
     </table>
+
+    <form class="form-inline">
+      <div class="form-group mx-sm-3">
+        <input type="number" class="form-control" id="bvalue" placeholder="$">
+      </div>
+      <button  class="btn btn-default" type="submit" id="vbutton">Set Value of Selected Card</button>
+    </form>
+
+
+    <form class="form-inline">
+      <div class="form-group mx-sm-3">
+        <input type="text" class="form-control" id="bowner" placeholder="">
+      </div>
+      <button  class="btn btn-default" id="obutton">Transfer Selected Card</button>
+    </form>
   </div>
   
   <script src="js/breezecard.js"></script>
