--- a/MARTA Project/public/manageCards.html
+++ b/MARTA Project/public/manageCards.html
@@ -25,7 +25,9 @@
                 </tr>
             </thead>
         </table>
-        <p id="wrong-rm-msg" style="color:red">You can't remove the last card in your accout!</p>
+        <div style="margin:15px">
+            <p id="wrong-rm-msg" style="color:red">You can't remove the last card in your accout!</p>
+        </div>
         <div style="margin:15px">
             <input type="number" id="new-card-num"></input>
             <button type="submit" class="btn btn-default" id="add-new-card-btn">Add Card</button>
