--- a/MARTA Project/public/passengerBreezecards.html
+++ b/MARTA Project/public/passengerBreezecards.html
@@ -14,6 +14,7 @@
 <body>
 
     <div class="container" style="margin-top:20px">
+        <h1>Welcome to MARTA</h1>
         <form id="PassengerBreezecards" class="form-horizontal">
             <div class="form-row">
                 <label for="sel1" style="float:left; padding: 6px 12px 2px 6px;">Select Breezecard</label>
