add error messages and fix bugs

--- a/MARTA Project/public/index.html
+++ b/MARTA Project/public/index.html
@@ -82,12 +82,11 @@
                             </p>
                             <p>
                                 <label for="password" class="youpasswd" data-icon="p">Password </label>
-                                <input id="password" name="password" required="required" type="password" placeholder="password" />
+                                <input id="password" name="password" required="required" type="password" placeholder="password" minlength="8" />
                             </p>
                             <p>
                                 <label for="password_confirm" class="youpasswd" data-icon="p">Confirm Password </label>
-                                <input id="password_confirm" name="confirm_password" required="required" type="password" placeholder="confirm password"
-                                />
+                                <input id="password_confirm" name="confirm_password" required="required" type="password" placeholder="confirm password" minlength="8" />
                             </p>
                             <div id="breezecard_opt_div">
                                 <div>
