fix bugs when register

--- a/MARTA Project/public/index.html
+++ b/MARTA Project/public/index.html
@@ -90,10 +90,10 @@
                             </p>
                             <div id="breezecard_opt_div">
                                 <div>
-                                    <input type="checkbox" name="get_new_breezecard">Get a new Breeze Card</input>
+                                    <input type="checkbox" name="get_new_breezecard" id="get-new">Get a new Breeze Card</input>
                                 </div>
                                 <div>
-                                    <input type="checkbox" name="use_exist_breezecard" checked>Use my existing Breeze Card</input>
+                                    <input type="checkbox" name="use_exist_breezecard" id="use-exist" checked>Use my existing Breeze Card</input>
                                 </div>
                                 <div>
                                     <label for="breeze_card_opt" class="breezecardnum">Breeze Card Number</label>
