--- a/MARTA Project/public/breezecard.html
+++ b/MARTA Project/public/breezecard.html
@@ -37,7 +37,7 @@
     </div>
     <div class = "form-group">
         <div class="col-xs-9 col-xs-offset-3">
-          <button type="submit" class="btn btn-default">Refresh</button>
+          <button type="submit" class="btn btn-primary">Refresh</button>
         </div>
     </div>
     <table class = "table table-striped" id = "breezecards">
@@ -54,7 +54,7 @@
       <div class="form-group mx-sm-3">
         <input type="number" class="form-control" id="bvalue" placeholder="$">
       </div>
-      <button  class="btn btn-default" type="submit" id="vbutton">Set Value of Selected Card</button>
+      <button  class="btn btn-primary" type="submit" id="vbutton">Set Value of Selected Card</button>
     </form>
 
 
@@ -62,7 +62,7 @@
       <div class="form-group mx-sm-3">
         <input type="text" class="form-control" id="bowner" placeholder="">
       </div>
-      <button  class="btn btn-default" id="obutton">Transfer Selected Card</button>
+      <button  class="btn btn-primary" id="obutton">Transfer Selected Card</button>
     </form>
   </div>
 
