--- a/MARTA Project/public/passengerBreezecards.html
+++ b/MARTA Project/public/passengerBreezecards.html
@@ -23,7 +23,7 @@
                         <option>Select Breezecard</option>
                     </select>
                 </div>
-                <button type="button" class="btn btn-default" id="manage-card-btn">Manage Cards</button>
+                <button type="button" class="btn btn-primary" id="manage-card-btn">Manage Cards</button>
             </div>
             <div class="form-group" style="margin-top:20px">
                 <label for="sID" class="col-xs-3 control-label">Balance</label>
@@ -35,7 +35,7 @@
                     <select class="form-control" id="sel2">
                     </select>
                 </div>
-                <button type="button" class="btn btn-default" id="start">Start Trip</button>
+                <button type="button" class="btn btn-primary" id="start">Start Trip</button>
                 <label id="progress" style="margin-top:8px; margin-left:10px; color:green">Trip in progress</label>
             </div>
             <div class="form-row">
@@ -44,14 +44,14 @@
                     <select class="form-control" id="sel3">
                     </select>
                 </div>
-                <button type="button" class="btn btn-default" id="end">End Trip</button>
+                <button type="button" class="btn btn-primary" id="end">End Trip</button>
             </div>
             <div style="margin-top:100px">
                 <div style="float: left; width: 130px">
-                    <button type="button" class="btn btn-default" id="view-trip-btn">View Trip History</button>
+                    <button type="button" class="btn btn-primary" id="view-trip-btn">View Trip History</button>
                 </div>
                 <div style="float: right; width: 450px">
-                    <button type="button" class="btn btn-default" id="logout">Logout</button>
+                    <button type="button" class="btn btn-primary" id="logout">Logout</button>
                 </div>
             </div>
         </form>
