--- a/MARTA Project/public/stationsListing.html
+++ b/MARTA Project/public/stationsListing.html
@@ -29,8 +29,8 @@
         </table>
         <div class="form-group">
             <div class="col-xs-9 col-xs-offset-3">
-                <button type="button" class="btn btn-default" id="create-station-btn">Create New Station</button>
-                <button type="button" class="btn btn-default" id='view-station-btn'>View Station</button>
+                <button type="button" class="btn btn-primary" id="create-station-btn">Create New Station</button>
+                <button type="button" class="btn btn-primary" id='view-station-btn'>View Station</button>
             </div>
         </div>
     </div>
