--- a/MARTA Project/public/suspendedCards.html
+++ b/MARTA Project/public/suspendedCards.html
@@ -29,10 +29,10 @@
         </table>
         <div style="margin:auto; width:50%">
             <div style="margin-bottom:10px">
-                <button type="submit" class="btn btn-default" id="to-new-btn" disabled="true">Assign Selected Card to New Owner</button>
+                <button type="submit" class="btn btn-primary" id="to-new-btn" disabled="true">Assign Selected Card to New Owner</button>
             </div>
             <div>
-                <button type="submit" class="btn btn-default" id="to-old-btn" disabled="true">Assign Selected Card to Previous Owner</button>
+                <button type="submit" class="btn btn-primary" id="to-old-btn" disabled="true">Assign Selected Card to Previous Owner</button>
                 <p style="font-size:12px">Assigning the card to an owner will unlock all accounts conflicted on the same Breeze Card
                 </p>
             </div>
