--- a/MARTA Project/public/viewStation.html
+++ b/MARTA Project/public/viewStation.html
@@ -24,7 +24,7 @@
         <div style="margin:15px">
             <label style="margin-right:150px">Fare:</label>
             <input type="number" id="fare"></input>
-            <button type="submit" class="btn btn-default">Update Fare</button>
+            <button type="submit" class="btn btn-primary">Update Fare</button>
             <div id="errormessage" style="color:red"></div>
         </div>
         <div style="margin:15px">
