--- a/MARTA Project/public/administratornew.html
+++ b/MARTA Project/public/administratornew.html
@@ -1,12 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <title>Administrator</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/demo.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.0.0-beta/css/bootstrap.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.16/css/dataTables.bootstrap4.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css">
@@ -14,28 +12,21 @@
     <script src="https://cdn.datatables.net/1.10.16/js/jquery.dataTables.min.js"></script>
     <script src="https://cdn.datatables.net/1.10.16/js/dataTables.bootstrap4.min.js"></script>
 </head>
-
 <body>
-    <div class="panel panel-admin">
-        <div class='panel-header'>
-            <h1>Administrator</h1>
+    <div class="container">
+        <h1>Administrator</h1>
+        <div class="list-group">
+            <button type="button" class="list-group-item" id="SM">Station Management</button>
+            <button type="button" class="list-group-item" id="SC">Suspended Cards</button>
+            <button type="button" class="list-group-item" id="BCM">Breeze Card Managerment</button>
+            <button type="button" class="list-group-item" id="PFR">Passenger Flow report</button>
         </div>
-        <div class="panel-body">
-            <div class="list-group panel-body">
-                <button type="button" class="btn btn-outline-secondary" id="SM">Station Management</button>
-                <button type="button" class="btn btn-outline-secondary" id="SC">Suspended Cards</button>
-                <button type="button" class="btn btn-outline-secondary" id="BCM">Breeze Card Managerment</button>
-                <button type="button" class="btn btn-outline-secondary" id="PFR">Passenger Flow report</button>
-            </div>
-        </div>
-        <div class="panel-foot">
+        <div class="form-group">
             <div class="col-xs-9 col-xs-offset-3">
                 <button type="button" class="btn btn-primary" id="logout">Log out</button>
             </div>
         </div>
-
     </div>
     <script src="javascripts/administrator.js"></script>
 </body>
-
 </html>
