--- a/MARTA Project/public/flowReport.html
+++ b/MARTA Project/public/flowReport.html
@@ -25,8 +25,8 @@
         </div>
         <div class="form-group">
             <div class="col-xs-9 col-xs-offset-3">
-                <button type="submit" class="btn btn-default">Update</button>
-                <button type="submit" class="btn btn-default">Reset</button>
+                <button type="submit" class="btn btn-primary">Update</button>
+                <button type="submit" class="btn btn-primary">Reset</button>
             </div>
         </div>
         <table class="table table-striped" id="report">
