--- a/MARTA Project/public/indexnew.html
+++ b/MARTA Project/public/indexnew.html
@@ -31,7 +31,7 @@
 <body>
     <div class="container">
         <header>
-            <h1></h1>
+            <h1>MARTA PROJECT</h1>
         </header>
         <section>
             <div id="container">
@@ -42,7 +42,7 @@
 
                     <div id="login" class="animate form">
                         <form id="sign-in-form" autocomplete="on">
-                            <h1>Log In</h1>
+                            <h1>Passenger Log In</h1>
                             <p>
                                 <label for="username" class="uname" data-icon="u">Username </label>
                                 <input id="username" name="username" required="required" type="text" placeholder="username" />
@@ -82,19 +82,18 @@
                             </p>
                             <p>
                                 <label for="password" class="youpasswd" data-icon="p">Password </label>
-                                <input id="password" name="password" required="required" type="password" placeholder="password" />
+                                <input id="password" name="password" required="required" type="password" placeholder="password" minlength="8" />
                             </p>
                             <p>
                                 <label for="password_confirm" class="youpasswd" data-icon="p">Confirm Password </label>
-                                <input id="password_confirm" name="confirm_password" required="required" type="password" placeholder="confirm password"
-                                />
+                                <input id="password_confirm" name="confirm_password" required="required" type="password" placeholder="confirm password" minlength="8" />
                             </p>
                             <div id="breezecard_opt_div">
                                 <div>
-                                    <input type="checkbox" name="get_new_breezecard">Get a new Breeze Card</input>
+                                    <input type="checkbox" name="get_new_breezecard" id="get-new">Get a new Breeze Card</input>
                                 </div>
                                 <div>
-                                    <input type="checkbox" name="use_exist_breezecard" checked>Use my existing Breeze Card</input>
+                                    <input type="checkbox" name="use_exist_breezecard" id="use-exist" checked>Use my existing Breeze Card</input>
                                 </div>
                                 <div>
                                     <label for="breeze_card_opt" class="breezecardnum">Breeze Card Number</label>
