--- a/MARTA Project/public/manageCards.html
+++ b/MARTA Project/public/manageCards.html
@@ -30,7 +30,7 @@
         </div>
         <div style="margin:15px">
             <input type="number" id="new-card-num"></input>
-            <button type="submit" class="btn btn-default" id="add-new-card-btn">Add Card</button>
+            <button type="submit" class="btn btn-primary" id="add-new-card-btn">Add Card</button>
             <p id="wrong-card-num" style="color:red">Please enter 16 digits.</p>
         </div>
         <h4>Add Value to Selected Card</h4>
@@ -47,7 +47,7 @@
         </div>
         <div class = "form-group">
             <div class="col-xs-9 col-xs-offset-3">
-                <button type="submit" class="btn btn-default" id="add-value-btn" disabled=true>Add Value</button>
+                <button type="submit" class="btn btn-primary" id="add-value-btn" disabled=true>Add Value</button>
             </div>
         </div>
     </div>
