return to menu buttons added

--- a/MARTA Project/public/flowReport.html
+++ b/MARTA Project/public/flowReport.html
@@ -40,6 +40,10 @@
                 </tr>
             </thead>
         </table>
+        <form class="form-inline">
+            <div class="form-group mx-sm-3">
+              <button type="button" class="btn btn-primary" id="home">Return to Menu</button>
+          </form>
     </div>
     <script src="javascripts/flowReport.js"></script>
 </body>
