--- a/MARTA Project/public/newStation.html
+++ b/MARTA Project/public/newStation.html
@@ -80,6 +80,10 @@
                     <button type="submit" class="btn btn-primary" id='create'>Create Station</button>
                 </div>
             </div>
+            <form class="form-inline">
+                <div class="form-group mx-sm-3">
+                  <button type="button" class="btn btn-primary" id="home">Return to Station Listing</button>
+              </form>
         </form>
     </div>
 
