--- a/MARTA Project/public/viewStation.html
+++ b/MARTA Project/public/viewStation.html
@@ -38,6 +38,10 @@
             <p>When checked, passengers can enter at this station</p>
             <p id="openmessage"></p>
         </div>
+        <form class="form-inline">
+            <div class="form-group mx-sm-3">
+              <button type="button" class="btn btn-primary" id="home">Return to Station Listing</button>
+          </form>
     </div>
 
     <script src="javascripts/viewStation.js"></script>
