--- a/MARTA Project/public/breezecard.html
+++ b/MARTA Project/public/breezecard.html
@@ -64,6 +64,11 @@
       </div>
       <button  class="btn btn-primary" id="obutton">Transfer Selected Card</button>
     </form>
+    <form class="form-inline">
+      <div class="form-group mx-sm-3">
+        <button type="button" class="btn btn-primary" id="home">Return to Menu</button>
+    </form>
+    
   </div>
 
   <script src="javascripts/breezecard.js"></script>
