--- a/MARTA Project/public/manageCards.html
+++ b/MARTA Project/public/manageCards.html
@@ -50,6 +50,10 @@
                 <button type="submit" class="btn btn-primary" id="add-value-btn" disabled=true>Add Value</button>
             </div>
         </div>
+        <form class="form-inline">
+            <div class="col-xs-9 col-xs-offset-3">
+              <button type="button" class="btn btn-primary" id="home">Go Back</button>
+          </form>
     </div>
     <script src="javascripts/manageCards.js"></script>
 </body>
