--- a/MARTA Project/public/stationsListing.html
+++ b/MARTA Project/public/stationsListing.html
@@ -31,6 +31,7 @@
             <div class="col-xs-9 col-xs-offset-3">
                 <button type="button" class="btn btn-primary" id="create-station-btn">Create New Station</button>
                 <button type="button" class="btn btn-primary" id='view-station-btn'>View Station</button>
+                <button type="button" class="btn btn-primary" id="home">Return to Menu</button>
             </div>
         </div>
     </div>
