--- a/MARTA Project/public/tripHistory.html
+++ b/MARTA Project/public/tripHistory.html
@@ -27,6 +27,7 @@
             <div class="col-xs-9 col-xs-offset-3">
                 <button id="update" type="button" class="btn btn-primary">Update</button>
                 <button id="reset" type="submit" class="btn btn-primary">Reset</button>
+                <button id="back" type="button" class="btn btn-primary">Back</button>
             </div>
         </div>
         <table class="table table-striped" id="trips">
